# torch_cuda_data_transfer

./: CMakeLists.txt  README.md  torch_and_cuda_call.cpp  torch_module_plus_cuda.cu  torch_module_plus_cuda.h
